# django_project_template

./: .gitignore  README  README.md  setup.sh
src/: .editorconfig  .pre-commit-config.yaml  Makefile  pyproject.toml  setup.cfg
src/dashboard/: urls.py  views.py
src/project_name/: settings.py  urls.py
src/templates/: base.html  index.html
src/ticket_list/: apps.py
