[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Krystof Rehacek <krystofee@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.6"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.2.0"
django-htmx = "^1.17.0"
django-browser-reload = "^1.12.0"
Werkzeug = "^3.0.0"
slippers = "^0.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
